--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,5 +5,8 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build"
+    },
+    "dependencies": {
+        "@babylonjs/core": "^5.43.0"
     }
 }
