Initialize WebSocket connection

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,8 +2,11 @@
     "name": "project-lemonde-server",
     "version": "0.0.1",
     "license": "Apache-2.0",
+    "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "vite build"
+        "dev": "npx ts-node --esm src/index.mts"
+    },
+    "dependencies": {
+        "ws": "^8.13.0"
     }
 }
