--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "author": "Masaru Yamagishi <akai_inu@live.jp>",
     "license": "Apache-2.0",
     "private": true,
+    "type": "module",
     "bugs": {
         "url": "https://github.com/il-m-yamagishi/project-lemonde/issues"
     },
@@ -29,8 +30,13 @@
         "@types/ws": "^8.5.4",
         "@typescript-eslint/eslint-plugin": "^5.48.1",
         "@typescript-eslint/parser": "^5.48.1",
+        "better-typescript-lib": "^2.3.0",
         "eslint": "^8.31.0",
-        "typescript": "~4.9.4",
+        "typescript": "~5.0.0",
         "vite": "^4.0.4"
+    },
+    "optionalDependencies": {
+        "bufferutil": "^4.0.7",
+        "utf-8-validate": "^6.0.3"
     }
 }
