--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "@typescript-eslint/parser": "^5.48.1",
         "better-typescript-lib": "^2.3.0",
         "eslint": "^8.31.0",
-        "typescript": "~5.0.0",
+        "typescript": "^4.9.0",
         "vite": "^4.0.4"
     },
     "optionalDependencies": {
